<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_favourite">Favourites</string>
    <string name="weather">Weather</string>
    <string name="menu_alert">Alerts</string>
    <string name="location">Location</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="pressure">Pressure</string>
    <string name="initial_setting">Initial Setting</string>
    <string name="ok">OK</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="confirm">Confirm</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="dot">-</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="hpa">hpa</string>
    <string name="m">m</string>
    <string name="k">K</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="m_s">m/s</string>
    <string name="m_h">m/h</string>

</resources>