<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_bk"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15sp"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_setting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/img"
            app:layout_constraintStart_toEndOf="@id/img"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="@id/layout">

        <TextView
            android:id="@+id/loc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/location"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15sp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/radioGroup_loc"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            app:layout_constraintStart_toEndOf="@id/loc_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/loc_txt"
            app:layout_constraintVertical_bias="0.24000001">

            <RadioButton
                android:id="@+id/radioButton_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:textSize="18sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/layout2"/>

</androidx.constraintlayout.widget.ConstraintLayout>